--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <link rel="stylesheet" href="nick.css">
 </head>
-<body class = "head">
+<body class>
 <div class="nav">
 </div>
 <div class="top">
@@ -11,14 +11,15 @@
 </div>
 <div class = "left">
 <p class="title">About Me</p>
-<p class="text">textextextextext</p>
+<p class="text"></p>
 </div>
 <div class = "middle">
-<p class="title">title</p>
+<p class="title">About my site</p>
 <p class="text">textextextextext</p>
 </div>
 <div class = "right">
-<p class="title">title</p>
+<p class="title">About</p>
 <p class="text">textextextextext</p>
 </div>
 </body>
+</html>
