--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body class>
 <div class="nav">
+<a id=blog href="http://nicholaschenblog.blogspot.com/">My blog</a>
 </div>
 <div class="top">
 <p class="maintitle">Nicholas Chen</p>
