--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <body class>
 <div class="nav">
 <a id=blog href="http://nicholaschenblog.blogspot.com/">My blog</a>
+<a id=home href="http://nichwch.github.io">Home</a>
+<a id=mystuff href="http">My Stuff</a>
 </div>
 <div class="top">
 <p class="maintitle">Nicholas Chen</p>
