experimenting with object

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 </div>
 <div class = "left">
 <p class="title">About Me</p>
-<p class="text"></p>
+<object data="http://nicholaschenblog.blogspot.com/ width="600" height="400">
+    <embed src="http://www.web-source.net" width="600" height="400"> </embed>
+    Error: Embedded data could not be displayed.
+</object>
 </div>
 <div class = "middle">
 <p class="title">About my site</p>
