--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
 </div>
 <div class = "left">
 <p class="title">About Me</p>
-<object data="http://nicholaschenblog.blogspot.com/" width="600" height="400">
-    <embed src="http://nicholaschenblog.blogspot.com/" width="600" height="400"> </embed>
-    Error: Embedded data could not be displayed.
-</object>
+<embed src="http://nicholaschenblog.blogspot.com/" width="600" height="400">Error: Embedded data could not be displayed.</embed>
 </div>
 <div class = "middle">
 <p class="title">About my site</p>
