--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </div>
 <div class = "left">
 <p class="title">About Me</p>
+<p class = "text">My name is Nicholas Chen and this is my website. Since this is the internet and the internet has pedophiles, I'll refrain from stating my age.</p>
 </div>
 <div class = "middle">
 <p class="title">About my site</p>
