--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </div>
 <div class = "left">
 <p class="title">About Me</p>
-<p class="text">My name is Nicholas Chen and this is my website. textextextextextextextextextextextextextextextextextextextextextextextext.</p>
+<p class="text">My name is Nicholas Chen and this is my website. textextextextextextextextext. textextextextextextextextextextextextextextext.</p>
 </div>
 <div class = "middle">
 <p class="title">About my site</p>
