--- a/blog.html
+++ b/blog.html
@@ -4,15 +4,15 @@
 </head>
 <body class>
 <div class="nav">
-<a id=blog href="http://nicholaschenblog.blogspot.com/">My blog</a>
+<a id=blog href="http://nichwch.github.io/blog.html">My blog</a>
 <a id=home href="http://nichwch.github.io">Home</a>
-<a id=mystuff href="http">My Stuff</a>
+<a id=mystuff href="http://nichwch.github.io">My Stuff</a>
 </div>
 <div class="top">
 <p class="maintitle">My blog</p>
 </div>
 <div class = "middle">
-<embed href="http://nicholaschenblog.blogspot.com/" width=800px height=1000px>Failed to load!</embed>
+<embed href="http://nicholaschenblog.blogspot.com/" width=800px height=1000px>/embed>
 </div>
 </body>
 </html>
