--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,8 @@
 <p class="maintitle">My blog</p>
 </div>
 <div class = "middle">
-<embed href="http://nicholaschenblog.blogspot.com/" width=800px height=1000px>/embed>
+<a class="embedly-card" href="http://nicholaschenblog.blogspot.com/">Nicholas Chen's Blog</a>
+<script>!function(a){var b="embedly-platform",c="script";if(!a.getElementById(b)){var d=a.createElement(c);d.id=b,d.src=("https:"===document.location.protocol?"https":"http")+"://cdn.embedly.com/widgets/platform.js";var e=document.getElementsByTagName(c)[0];e.parentNode.insertBefore(d,e)}}(document);</script>
 </div>
 </body>
 </html>
