--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
 <p class="maintitle">My blog</p>
 </div>
 <div class = "middle">
-<object data="http://nicholaschenblog.blogspot.com/" type="text/html"><p>Code failed to load. Try refreshing the page.</p></object>
+<object id = "embed" data="http://nicholaschenblog.blogspot.com/" type="text/html"><p>Code failed to load. Try refreshing the page.</p></object>
 </div>
 </body>
 </html>
