--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
 <a id=mystuff href="http://nichwch.github.io">My Stuff</a>
 </div>
 <div class="top">
-<p class = "title">My Blog</p>
+<p class = "maintitle">My Blog</p>
 </div>
 <div class = "middle">
 <object id = "embed" data="http://nicholaschenblog.blogspot.com/" type="text/html"><p>Code failed to load. Try refreshing the page.</p></object>
