--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 </head>
 <body class>
 <div class="nav">
-<a id=blog href="http://nicholaschenblog.blogspot.com/">My blog</a>
+<a id=blog href="http://nichwch.github.io/blog.html">My blog</a>
 <a id=home href="http://nichwch.github.io">Home</a>
-<a id=mystuff href="http">My Stuff</a>
+<a id=mystuff href="http://nichwch.github.io">My Stuff</a>
 </div>
 <div class="top">
 <p class="maintitle">Nicholas Chen</p>
