--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <div class="nav">
 <a id=blog href="http://nichwch.github.io/blog.html">My blog</a>
 <a id=home href="http://nichwch.github.io">Home</a>
-<a id=mystuff href="http://nichwch.github.io">My Stuff</a>
+<a id=mystuff href="http://nichwch.github.io/mystuff.html">My Stuff</a>
 </div>
 <div class="top">
 <p class="maintitle">Nicholas Chen</p>
