--- a/blog.html
+++ b/blog.html
@@ -1,19 +1,18 @@
-<!DOCTYPE html>
 <html>
 <head>
 <link rel="stylesheet" href="nick.css">
 </head>
 <body class>
 <div class="nav">
-<a id=blog href="http://nichwch.github.io/blog.html">My blog</a>
+<a id=blog href="http://nicholaschenblog.blogspot.com/">My blog</a>
 <a id=home href="http://nichwch.github.io">Home</a>
-<a id=mystuff href="http://nichwch.github.io/mystuff.html">My Stuff</a>
+<a id=mystuff href="http">My Stuff</a>
 </div>
 <div class="top">
-<p class = "maintitle">My Blog</p>
+<p class="maintitle">My blog</p>
 </div>
 <div class = "middle">
-<object id = "embed" data="http://nicholaschenblog.blogspot.com/" type="text/html"><p>Code failed to load. Try refreshing the page.</p></object>
+<embed href="http://nicholaschenblog.blogspot.com/" width=800px height=1000px>Failed to load!</embed>
 </div>
 </body>
 </html>
