--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <p class="text">textextextextext</p>
 </div>
 <div id="corner">
-<img src="corner.jpg" alt="sorry no load">
+<img src="cornerjpg.jpg" alt="sorry no load">
 </div>
 </body>
 </html>
