--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 <p class="title">About Me</p>
 <p class="text">textextextextext</p>
 </div>
-<div id="corner">
-<img src="cornerjpg.jpg" alt="sorry no load">
-</div>
+<img id="corner" src="cornerjpg.jpg" alt="sorry no load">
+</img>
 </body>
 </html>
