--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body class>
 <div class="nav">
-<a id"blog" href="http://nichwch.github.io/blog.html">My blog</a>
+<a id="blog" href="http://nichwch.github.io/blog.html">My blog</a>
 <a id="home" href="http://nichwch.github.io">Home</a>
 <a id="mystuff" href="http://nichwch.github.io/mystuff.html">My Stuff</a>
 </div>
