--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
 <p class="maintitle">My blog</p>
 </div>
 <div class = "middle">
-<embed href="http://nicholaschenblog.blogspot.com/" width=800px height=1000px>Failed to load!</embed>
+<iframe href="http://nicholaschenblog.blogspot.com/" width=800px height=1000px>Failed to load!</iframe>
 </div>
 </body>
 </html>
