--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
 <p class="maintitle">My blog</p>
 </div>
 <div class = "middle">
-<iframe href="http://nicholaschenblog.blogspot.com/" width=800px height=1000px>Failed to load!</iframe>
+<object id="embed" data="http://nicholaschenblog.blogspot.com/" type="text/html">Failed to load!</object>
 </div>
 </body>
 </html>
