--- a/blog.html
+++ b/blog.html
@@ -14,5 +14,6 @@
 <div class = "middle">
 <object id="embed" data="http://nicholaschenblog.blogspot.com/" type="text/html">Failed to load!</object>
 </div>
+<img id="corner" src="cornerjpg.jpg" alt="sorry no load">
 </body>
 </html>
