--- a/mystuff.html
+++ b/mystuff.html
@@ -16,5 +16,6 @@
 <p class="title">My Stuff</p>
 <p class="text">This is the stuff I make. Right now there isn't much.</p>
 </div>
+<img id="corner" src="cornerjpg.jpg" alt="sorry no load">
 </body>
 </html>
