--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 </head>
 <body class>
 <div class="nav">
-<a id="blog" href="http://nichwch.github.io/blog.html">My blog</a>
-<a id="home" href="http://nichwch.github.io">Home</a>
-<a id="mystuff" href="http://nichwch.github.io/mystuff.html">My Stuff</a>
+<a id="blog" href="http://sophxch.github.io/blog.html">My blog</a>
+<a id="home" href="http://sophxch.github.io">Home</a>
+<a id="mystuff" href="http://sophwch.github.io/mystuff.html">My Stuff</a>
 </div>
 <div class="top">
 <p class="maintitle">Nicholas Chen</p>
@@ -16,7 +16,6 @@
 <p class="title">About Me</p>
 <p class="text">textextextextext</p>
 </div>
-<img id="corner" src="cornerjpg.jpg" alt="sorry no load">
 </img>
 </body>
 </html>
