--- a/blog.html
+++ b/blog.html
@@ -4,15 +4,15 @@
 </head>
 <body class>
 <div class="nav">
-<a id=blog href="http://nichwch.github.io/blog.html">My blog</a>
-<a id=home href="http://nichwch.github.io">Home</a>
-<a id=mystuff href="http://nichwch.github.io/mystuff.html">My Stuff</a>
+<a id=blog href="http://sophxch.github.io/blog.html">My blog</a>
+<a id=home href="http://sophwch.github.io">Home</a>
+<a id=mystuff href="http://sophxch.github.io/mystuff.html">My Stuff</a>
 </div>
 <div class="top">
 <p class="maintitle">My blog</p>
 </div>
 <div class = "middle">
-<object id="embed" data="http://nicholaschenblog.blogspot.com/" type="text/html">Failed to load!</object>
+<object id="embed" data="" type="text/html">Failed to load!</object>
 </div>
 <img id="corner" src="cornerjpg.jpg" alt="sorry no load">
 </body>
