--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <a id="mystuff" href="http://sophwch.github.io/mystuff.html">My Stuff</a>
 </div>
 <div class="top">
-<p class="maintitle">Nicholas Chen</p>
+<p class="maintitle">Sophia Chen</p>
 </div>
 <div class = "middle">
 <p class="title">About Me</p>
