--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <div class="nav">
 <a id="blog" href="http://sophxch.github.io/blog.html">My blog</a>
 <a id="home" href="http://sophxch.github.io">Home</a>
-<a id="mystuff" href="http://sophwch.github.io/mystuff.html">My Stuff</a>
+<a id="mystuff" href="http://sophxch.github.io/mystuff.html">My Stuff</a>
 </div>
 <div class="top">
 <p class="maintitle">Sophia Chen</p>
