--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
 <body class>
 <div class="nav">
 <a id=blog href="http://sophxch.github.io/blog.html">My blog</a>
-<a id=home href="http://sophwch.github.io">Home</a>
+<a id=home href="http://sophxch.github.io">Home</a>
 <a id=mystuff href="http://sophxch.github.io/mystuff.html">My Stuff</a>
 </div>
 <div class="top">
