--- a/mystuff.html
+++ b/mystuff.html
@@ -15,6 +15,7 @@
 <div class = "middle">
 <p class="title">My Stuff</p>
 <p class="text">This is the stuff I make. Right now there isn't much.</p>
+<img src="http://www.htmldog.com/badge1.gif" width="120" height="90" alt="HTML Dog">
 </div>
 </body>
 </html>
