--- a/mystuff.html
+++ b/mystuff.html
@@ -13,9 +13,9 @@
 <p class="maintitle">Sophia Chen</p>
 </div>
 <div class = "middle">
-<p class="title">My Stuff</p>
-<p class="text">This is the stuff I make. Right now there isn't much.</p>
-<img src="http://www.htmldog.com/badge1.gif" width="120" height="90" alt="HTML Dog">
+<p class="title">THE ONE< ONLY, Sophia!!! ABOVE AND BEYOND AWESOMENESS</p>
+<p class="text">More about me.</p>
+<img src="http://http://andafter.org/media/users/29/Tare_Panda_Riceball_by_Zlu5hy.jpg" width="120" height="90" alt="tare panda">
 </div>
 </body>
 </html>
