--- a/mystuff.html
+++ b/mystuff.html
@@ -15,7 +15,7 @@
 <div class = "middle">
 <p class="title">THE ONE< ONLY, Sophia!!! ABOVE AND BEYOND AWESOMENESS</p>
 <p class="text">More about me.</p>
-<img src="http://http://andafter.org/media/users/29/Tare_Panda_Riceball_by_Zlu5hy.jpg" width="120" height="90" alt="tare panda">
+<img src="http://andafter.org/media/users/29/Tare_Panda_Riceball_by_Zlu5hy.jpg" width="120" height="90" alt="tare panda">
 </div>
 </body>
 </html>
