--- a/mystuff.html
+++ b/mystuff.html
@@ -16,6 +16,6 @@
 <p class="title">THE ONE< ONLY, Sophia!!! ABOVE AND BEYOND AWESOMENESS</p>
 <p class="text">More about me.</p>
 </div>
-<embed id="corner" src="http://andafter.org/media/users/29/Tare_Panda_Riceball_by_Zlu5hy.jpg" alt="tare panda">
+<img id="corner" src="http://andafter.org/media/users/29/Tare_Panda_Riceball_by_Zlu5hy.jpg" alt="tare panda">
 </body>
 </html>
