--- a/mystuff.html
+++ b/mystuff.html
@@ -7,14 +7,14 @@
 <div class="nav">
 <a id=blog href="http://sophxch.github.io/blog.html">My blog</a>
 <a id=home href="http://sophxch.github.io">Home</a>
-<a id=mystuff href="http://sophxch.github.io/mystuff.html">My Stuff</a>
+<a id=ME href="http://sophxch.github.io/mystuff.html">My Stuff</a>
 </div>
 <div class="top">
 <p class="maintitle">Sophia Chen</p>
 </div>
 <div class = "middle">
 <img id="corner" src="http://andafter.org/media/users/29/Tare_Panda_Riceball_by_Zlu5hy.jpg" alt="tare panda">
-<p class="title">THE ONE< ONLY, Sophia!!! ABOVE AND BEYOND AWESOMENESS</p>
+<p class="title">Sophia, ABOVE AND BEYOND AWESOMENESS</p>
 <p class="text">More about me.</p>
 </div>
 </body>
