--- a/mystuff.html
+++ b/mystuff.html
@@ -13,7 +13,7 @@
 <p class="maintitle">Sophia Chen</p>
 </div>
 <div class = "middle">
-<img id="corner" src="http://andafter.org/media/users/29/Tare_Panda_Riceball_by_Zlu5hy.jpg" alt="tare panda">
+<img id="middle" src="http://andafter.org/media/users/29/Tare_Panda_Riceball_by_Zlu5hy.jpg" alt="tare panda">
 <p class="title">Sophia, ABOVE AND BEYOND AWESOMENESS</p>
 <p class="text">More about me.</p>
 </div>
