--- a/mystuff.html
+++ b/mystuff.html
@@ -9,11 +9,11 @@
 <a id=home href="http://sophxch.github.io">Home</a>
 <a id=ME href="http://sophxch.github.io/mystuff.html">My Stuff</a>
 </div>
-<div class="top">
+<div class="bottom">
 <p class="maintitle">Sophia Chen</p>
 </div>
-<div class = "middle">
-<img id="middle" src="http://andafter.org/media/users/29/Tare_Panda_Riceball_by_Zlu5hy.jpg" alt="tare panda">
+<div class = "corner">
+<img id="corner" src="http://andafter.org/media/users/29/Tare_Panda_Riceball_by_Zlu5hy.jpg" alt="tare panda">
 <p class="title">Sophia, ABOVE AND BEYOND AWESOMENESS</p>
 <p class="text">More about me.</p>
 </div>
