--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
 </div>
 <div class = "middle">
 <object id="embed" data="" type="text/html">Failed to load!</object>
-<img src="http://www.htmldog.com/badge1.gif" width="120" height="90" alt="HTML Dog">
+<div class ="title">AWESOMENESS</div>
   
 </div>
 </body>
