--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 </div>
 <div class = "middle">
 <p class="title">About             Me</p>
-<p class="text">textextextextext</p>
+<p class="text">This is my website. I made it cuz' I'm bored. Don't even ask.</p>
+<img id="corner" src="http://andafter.org/media/users/29/Tare_Panda_Riceball_by_Zlu5hy.jpg" alt="tare panda">
+<p class="title">Sophia, ABOVE AND BEYOND AWESOMENESS</p>
+<p class="text">I am cool. I am also insanely vain. :)</p>
 </div>
 </img>
 </body>
