--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
 </div>
 <div class = "middle">
 <p class = "title">My Favorites</p>
-
+<img id="corner" src="http://andafter.org/media/users/29/Tare_Panda_Riceball_by_Zlu5hy.jpg" alt="tare panda">
 </div>
 </body>
 </html>
