--- a/mystuff.html
+++ b/mystuff.html
@@ -15,7 +15,7 @@
 <div class = "corner">
 <img id="corner" src="http://andafter.org/media/users/29/Tare_Panda_Riceball_by_Zlu5hy.jpg" alt="tare panda">
 <p class="title">Sophia, ABOVE AND BEYOND AWESOMENESS</p>
-<p class="text">More about me.</p>
+<p class="text">I'm sorry, I'm feeling incredibly vain :).</p>
 </div>
 </body>
 </html>
