--- a/blog.html
+++ b/blog.html
@@ -9,11 +9,12 @@
 <a id=mystuff href="http://sophxch.github.io/mystuff.html">My Stuff</a>
 </div>
 <div class="top">
-<p class="maintitle">My blog</p>
+<p class="maintitle">My other Awesome stuff</p>
 </div>
 <div class = "middle">
-<p class = "title">My Favorites</p>
+<p class = "title">Find me here:</p>
 <img id="corner" src="http://andafter.org/media/users/29/Tare_Panda_Riceball_by_Zlu5hy.jpg" alt="tare panda">
+<p class = "text">My Blog- sophxch.blogspot.com</p>
 </div>
 </body>
 </html>
