--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
 <a id=mystuff href="http://sophxch.github.io/mystuff.html">My Stuff</a>
 </div>
 <div class="top">
-<p class="maintitle">My other Awesome stuff</p>
+<p class="maintitle">My other stuff</p>
 </div>
 <div class = "middle">
 <p class = "title">Find me here:</p>
