--- a/blog.html
+++ b/blog.html
@@ -15,6 +15,7 @@
 <p class = "title">Find me here:</p>
 <img id="corner" src="http://andafter.org/media/users/29/Tare_Panda_Riceball_by_Zlu5hy.jpg" alt="tare panda">
 <p class = "text">My Blog- sophxch.blogspot.com</p>
+<p class = "text">This is my website... I'm not really sure what to put here... so this is gonna be pretty random.</p>
 </div>
 </body>
 </html>
