--- a/blog.html
+++ b/blog.html
@@ -16,7 +16,7 @@
 <img id="corner" src="http://andafter.org/media/users/29/Tare_Panda_Riceball_by_Zlu5hy.jpg" alt="tare panda">
 <p class = "text">My Blog- sophxch.blogspot.com  My Bro's website: nichwch.github.io</p>
 <p class = "text">This is my website... I'm not really sure what to put here... so this is gonna be pretty random.</p>
-<p class = "text">My school just ended about a week ago. I'm not sure if I should be sad or happy, because I don't go to a neighborhood school. Some of my friends are going to different middle schools.</p>
+<p class = "text">My school just ended about a week ago. I'm not sure if I should be sad or happy, because I don't go to a neighborhood school. Some of my friends are going to different middle schools. But then again, i never really liked being in elementary school.</p>
 </p>
 </div>
 </body>
