--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 <a id="mystuff" href="http://sophxch.github.io/mystuff.html">My Stuff</a>
 </div>
 <div class="top">
-<p class="maintitle">Sophia Chen</p>
+<p class="maintitle">Welcome To Sophia's WEBSITE!!!!</p>
 </div>
 <div class = "middle">
-<p class="title">About             Me</p>
+<p class="title">About Me</p>
 <p class="text">This is my website. I made it cuz' I'm bored. Don't even ask.</p>
+<p class= "text">Welcome! My name is Sophia Chen. I like drawing, arts, and music.</p>
 <img id="corner" src="http://andafter.org/media/users/29/Tare_Panda_Riceball_by_Zlu5hy.jpg" alt="tare panda">
 </p>
 </div>
