--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 <p class="text">This is my website. I made it cuz' I'm bored. Don't even ask.</p>
 <p class= "text">Welcome! My name is Sophia Chen. I like drawing, arts, and music.</p>
 <img id="corner" src="http://andafter.org/media/users/29/Tare_Panda_Riceball_by_Zlu5hy.jpg" alt="tare panda">
+<form action="processingscript.php" method="post">
+
 </p>
 </div>
 </img>
