--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 <p class="text">This is my website. I made it cuz' I'm bored. Don't even ask.</p>
 <p class= "text">Welcome! My name is Sophia Chen. I like drawing, arts, and music.</p>
 <img id="corner" src="http://andafter.org/media/users/29/Tare_Panda_Riceball_by_Zlu5hy.jpg" alt="tare panda">
-<form action="processingscript.php" method="post">
-
+<textarea rows="5" cols="20">A big load of text</textarea>
 </p>
 </div>
 </img>
