--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
 <p class="text">This is my website. I made it cuz' I'm bored. Don't even ask.</p>
 <p class= "text">Welcome! My name is Sophia Chen. I like drawing, arts, and music.</p>
 <img id="corner" src="http://andafter.org/media/users/29/Tare_Panda_Riceball_by_Zlu5hy.jpg" alt="tare panda">
-<textarea rows="10" cols="20">A big load of text</textarea>
+<textarea rows="10" cols="20">Suggestions:</textarea>
+<select>
+    <option>Option 1</option>
+    <option>Option 2</option>
+    <option value="third option">Option 3</option>
+</select>
 </p>
 </div>
 </img>
