--- a/index.html
+++ b/index.html
@@ -17,12 +17,23 @@
 <p class="text">This is my website. I made it cuz' I'm bored. Don't even ask.</p>
 <p class= "text">Welcome! My name is Sophia Chen. I like drawing, arts, and music.</p>
 <img id="corner" src="http://andafter.org/media/users/29/Tare_Panda_Riceball_by_Zlu5hy.jpg" alt="tare panda">
-<textarea rows="10" cols="20">Suggestions:</textarea>
-<select>
-    <option>Option 1</option>
-    <option>Option 2</option>
-    <option value="third option">Option 3</option>
-</select>
+<form action="contactus.php" method="post">
+
+    <p>Name:</p>
+    <p><input type="text" name="name" value="Your name"></p>
+
+    <p>Comments: </p>
+    <p><textarea name="comments" rows="5" cols="20">Your comments</textarea></p>
+
+    <p>Are you:</p>
+    <p><input type="radio" name="areyou" value="male"> Male</p>
+    <p><input type="radio" name="areyou" value="female"> Female</p>
+    <p><input type="radio" name="areyou" value="hermaphrodite"> An hermaphrodite</p>
+    <p><input type="radio" name="areyou" value="asexual"> Asexual</p>
+
+    <p><input type="submit"></p>
+
+</form>
 </p>
 </div>
 </img>
