--- a/blog.html
+++ b/blog.html
@@ -1,21 +1,54 @@
+<!DOCTYPE html>
 <html>
 <head>
 <link rel="stylesheet" href="nick.css">
+<!--[if IE]>
+<script type="text/javascript">
+window.location = "http://www.google.com/";
+</script>
+<![endif]-->
 </head>
 <body class>
 <div class="nav">
-<a id=blog href="http://sophxch.github.io/blog.html">My blog</a>
-<a id=home href="http://sophxch.github.io">Home</a>
-<a id=mystuff href="http://sophxch.github.io/mystuff.html">My Stuff</a>
+<a id="blog" href="http://nichwch.github.io/blog.html">BLOG</a>
+<a id="selecthome" href="http://nichwch.github.io">HOME</a>
+<a id="mystuff" href="http://nichwch.github.io/mystuff.html">MEDIA</a>
 </div>
 <div class="top">
-<p class="maintitle">My Other... Stuff</p></p>
+<p class="maintitle">Nicholas Chen</p>
 </div>
-<img id="corner" src="http://andafter.org/media/users/29/Tare_Panda_Riceball_by_Zlu5hy.jpg" alt="tare panda">
-<p class = "text">My Blog- sophxch.blogspot.com  My Bro's website: nichwch.github.io</p>
-<p class = "text">This is my website... I'm not really sure what to put here... so this is gonna be pretty random.</p>
-<p class = "text">My school just ended about a week ago. I'm not sure if I should be sad or happy, because I don't go to a neighborhood school. Some of my friends are going to different middle schools. But then again, i never really liked being in elementary school.</p>
+<div class = "middle">
+<div class = "dark">
+<p class="title">About Me</p>
+<p class="title">About my site</p>
 </p>
 </div>
+<div class="light">
+</div>
+<div class = "dark">
+<p class="maintitle"> Stuff
+</p>
+<p class="title">movies
+</p>
+<p class="text">
+#1: Despictable me br>
+Despictable me was an AMAZING. The cute little minions and Gru... 
+</p>
+<p class="text">
+#2: Despictable me 2<br>
+Despictable me 2 was almost as amazing as the first. If only the purple minions actually started to destroy the city.
+</p>
+</div>
+<div class="light">
+</div>
+<div class ="dark">
+<p class="title">
+Links
+</p>
+</a>
+</div>
+</div>
+<img id="corner" src="http://andafter.org/media/users/29/Tare_Panda_Riceball_by_Zlu5hy.jpg" alt="tare panda">
+</img>
 </body>
 </html>
