--- a/blog.html
+++ b/blog.html
@@ -15,12 +15,10 @@ window.location = "http://www.google.com/";
 <a id="mystuff" href="http://nichwch.github.io/mystuff.html">MEDIA</a>
 </div>
 <div class="top">
-<p class="maintitle">Nicholas Chen</p>
+<p class="maintitle">Sophia :) :(</p>
 </div>
 <div class = "middle">
 <div class = "dark">
-<p class="title">About Me</p>
-<p class="title">About my site</p>
 </p>
 </div>
 <div class="light">
