--- a/blog.html
+++ b/blog.html
@@ -29,19 +29,20 @@ window.location = "http://www.google.com/";
 <p class="title">movies
 </p>
 <p class="text">
-#1: Despictable me br>
+#1: Despictable me 
 Despictable me was an AMAZING. The cute little minions and Gru... 
 </p>
 <p class="text">
 #2: Despictable me 2<br>
 Despictable me 2 was almost as amazing as the first. If only the purple minions actually started to destroy the city.
 </p>
+<p class="text">#3 The Lego Movie
+  What I really liked about it was the ending, when the camera zooms out and you see the boy and his father
+</p>
 </div>
 <div class="light">
 </div>
 <div class ="dark">
-<p class="title">
-Links
 </p>
 </a>
 </div>
