--- a/blog.html
+++ b/blog.html
@@ -10,9 +10,9 @@ window.location = "http://www.google.com/";
 </head>
 <body class>
 <div class="nav">
-<a id="blog" href="http://nichwch.github.io/blog.html">BLOG</a>
-<a id="selecthome" href="http://nichwch.github.io">HOME</a>
-<a id="mystuff" href="http://nichwch.github.io/mystuff.html">MEDIA</a>
+<a id="blog" href="http://sophxch.github.io/blog.html">BLOG</a>
+<a id="selecthome" href="http://sophxch.github.io/home.html">HOME</a>
+<a id="mystuff" href="http://sophxch.github.io/myStuff.html">My Stuff</a>
 </div>
 <div class="top">
 <p class="maintitle">Sophia :) :(</p>
