--- a/blog.html
+++ b/blog.html
@@ -11,8 +11,8 @@ window.location = "http://www.google.com/";
 <body class>
 <div class="nav">
 <a id="blog" href="http://sophxch.github.io/blog.html">BLOG</a>
-<a id="selecthome" href="http://sophxch.github.io/home.html">HOME</a>
-<a id="mystuff" href="http://sophxch.github.io/myStuff.html">My Stuff</a>
+<a id="selecthome" href="http://sophxch.github.i">HOME</a>
+<a id="mystuff" href="http://sophxch.github.io/mystuff.html">My Stuff</a>
 </div>
 <div class="top">
 <p class="maintitle">Sophia :) :(</p>
