--- a/mystuff.html
+++ b/mystuff.html
@@ -7,7 +7,7 @@
 <div class="nav">
 <a id=blog href="http://sophxch.github.io/blog.html">My blog</a>
 <a id=home href="http://sophxch.github.io">Home</a>
-<a id=ME href="http://sophxch.github.io/mystuff.html">My Stuff</a>
+<a id=ME href="http://sophxch.github.io/mystuff.html">Other Stuff</a>
 </div>
 <div class="bottom">
 <p class="maintitle">Sophia Chen</p>
@@ -15,7 +15,8 @@
 <div class = "corner">
 <img id="corner" src="http://andafter.org/media/users/29/Tare_Panda_Riceball_by_Zlu5hy.jpg" alt="tare panda">
 <p class="title">Sophia, ABOVE AND BEYOND AWESOMENESS</p>
-<p class="text">I'm sorry, I'm feeling incredibly vain :).</p>
+<p class="text">I'm sorry, but I HAVE NO IDEA WHAT I SHOULD PUT ON THIS PAGE. I need ideas
+i will edit later.</p>
 </div>
 </body>
 </html>
