--- a/blog.html
+++ b/blog.html
@@ -37,7 +37,8 @@ Despictable me was an AMAZING. The cute little minions and Gru...
 Despictable me 2 was almost as amazing as the first. If only the purple minions actually started to destroy the city.
 </p>
 <p class="text">#3 The Lego Movie
-  What I really liked about it was the ending, when the camera zooms out and you see the boy and his father
+  What I really liked about it was the ending, when the camera zooms out and you see the boy and his father argue about if the boy should
+  be able to play with the lego city. and then when he wins, the Duplos take over. :)
 </p>
 </div>
 <div class="light">
