--- a/blog.html
+++ b/blog.html
@@ -24,7 +24,7 @@ window.location = "http://www.google.com/";
 <div class="light">
 </div>
 <div class = "dark">
-<p class="maintitle"> Stuff
+<p class="maintitle"> BloG STuff
 </p>
 <p class="title">movies
 </p>
