--- a/blog.html
+++ b/blog.html
@@ -36,9 +36,7 @@ Despictable me was an AMAZING. The cute little minions and Gru...
 #2: Despictable me 2<br>
 Despictable me 2 was almost as amazing as the first. If only the purple minions actually started to destroy the city.
 </p>
-<p class="text">#3 The Lego Movie
-  What I really liked about it was the ending, when the camera zooms out and you see the boy and his father argue about if the boy should
-  be able to play with the lego city. and then when he wins, the Duplos take over. :)
+<p class="text">#3 okay i give up, i have no idea what i'm supposed to put here...'
 </p>
 </div>
 <div class="light">
