--- a/index.html
+++ b/index.html
@@ -1,26 +1,19 @@
 <!DOCTYPE html>
-<html>
-<head>
-<link rel="stylesheet" href="nick.css">
-</head>
-<body class>
-<div class="nav">
-<a id="blog" href="http://sophxch.github.io/blog.html">My blog</a>
-<a id="home" href="http://sophxch.github.io">Home</a>
-<a id="mystuff" href="http://sophxch.github.io/mystuff.html">My Stuff</a>
-</div>
-<div class="top">
-<p class="maintitle">Welcome!</p>
-</div>
-<div class = "middle">
-<p class="title">About Me</p>
-<p class="text">This is my website. I made it cuz' I'm bored. Don't even ask.</p>
-<p class= "text">Welcome! My name is Sophia Chen. I like drawing, arts, and music.</p>
-<img id="corner" src="http://andafter.org/media/users/29/Tare_Panda_Riceball_by_Zlu5hy.jpg" alt="tare panda">
-<form action="contactus.php" method="post">
 
-</p>
-</div>
-</img>
+<html>
+
+<head>
+    <title>Sophia</title>
+</head>
+
+<body>
+    <h1>i am awesome</h1>
+
+    <h2>Taylor Swift is amazing</h2>
+    <p>A #awesomeness</p>
+
+    <h2>Why this is</h2>
+    <p>To learn HTML</p>
 </body>
+
 </html>
